# Origin-

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  GOVERNANCE.md  L1_MASTERPIECE_REPORT.md  L1_OMEGA_REPORT.md  L1_OMEGA_REPORT.origin  LICENSE  Makefile  NON_GOALS.md  ORIGIN_DOCTRINE.md  PROTOCOL_VISION.md  README.md  REVIEW-INDEPENDENT.md  RFC-0001.md  SECURITY.md  SUPPORT.md  THREAT_MODEL.md  TRUST_MODEL.md  clippy.toml  deny.toml  flake.nix  origin-linux-aarch64  rust-toolchain.toml  rustfmt.toml
.cargo/: config.toml
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler.yml
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
.github/actions/origin-verify/: action.yml
.github/workflows/: ci.yml  codeql.yml  release.yml  scorecard.yml  secret-scanning.yml
.opencode/: config.json
Formula/: origin.rb
benches/: verify.rs
completions/: README.md  origin.bash  origin.fish  origin.zsh
contracts/: foundry.toml
contracts/certora/: VrmSettlement.spec
contracts/src/: VrmSettlement.sol
contrib/homebrew/: origin.rb
crates/fuzz/: Cargo.toml
crates/fuzz/fuzz_targets/: fuzz_binary.rs  fuzz_parse.rs
crates/origin-cli/: Cargo.toml
crates/origin-cli/src/: main.rs
crates/origin-core/: Cargo.toml  cbindgen.toml
crates/origin-core/benches/: verify.rs
crates/origin-core/src/: audit.rs  binary.rs  bls.rs  c2pa.rs  crypto.rs  error.rs  hash.rs  http.rs  lib.rs  statement.rs  wasm_api.rs
crates/origin-core/tests/: boundary.rs  domain10_audit.rs  domain11_audit.rs  domain12_audit.rs  domain1_audit.rs  domain2_audit.rs  domain3_audit.rs  domain4_audit.rs  domain5_audit.rs  domain6_audit.rs  domain7_audit.rs  domain8_audit.rs  domain9_audit.rs  gold_standard_audit.rs  negative.rs  omega_domain1.rs  omega_domain2.rs  omega_domain3.rs  omega_domain5.rs  omega_domain5_sparse.rs  omega_domain6.rs  omega_domain9.rs  proptest.proptest-regressions  proptest.rs  sidechannel.rs
crates/origin-embed/: Cargo.toml
crates/origin-embed/src/: jpeg.rs  lib.rs  mp3.rs  pdf.rs  png.rs  tests.rs
crates/origin-hae/: Cargo.toml
crates/origin-hae/src/: lib.rs
crates/origin-ikm/: Cargo.toml
crates/origin-ikm/src/: lib.rs
crates/origin-ivg/: Cargo.toml
crates/origin-ivg/src/: lib.rs
crates/origin-vrm/: Cargo.toml
crates/origin-vrm/src/: lib.rs
crates/origin-zk/: Cargo.toml
crates/origin-zk/src/: lib.rs
docs/: ARCHITECTURE.md  GLOSSARY.md  IDENTITY.md  L1_OMEGA_REPORT.md  L1_OMEGA_REPORT.origin  LAYOUT.md  PROBLEM.md  PROTOCOL_VISION.md  REVIEW-INDEPENDENT.md  REVIEW-v0.1.0-alpha.md  ROADMAP.md  THREAT_MODEL.md  WHAT_IS_ORIGIN.md  origin-linux-x86_64.origin  origin-public.key  origin.1
docs/adr/: README.md
docs/rfc/: PROBLEM.md  THREAT_MODEL.md
docs/specs/: LAYOUT.md
examples/: sign-release.sh  sign-with-parent.sh  verify-release.sh
examples/wasm/: Cargo.toml  index.html
examples/wasm/src/: lib.rs
formal/: README.md
formal/coq/: SerializationBijection.v
formal/kani/: kani-demo.rs
formal/tla/: IvgCrdt.tla  VrmChannel.tla
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_base64.rs  parse.rs  verify.rs  verify_chain.rs  verify_key.rs
infra/docker/: Dockerfile.origin-cli  Dockerfile.origin-core.wasm
infra/terraform/: main.tf
origin-cli/: Cargo.toml
origin-cli/src/: main.rs
origin-cli/tests/: cli.rs
origin-core/: Cargo.toml  cbindgen.toml
origin-core/benches/: verify.rs
origin-core/src/: audit.rs  binary.rs  crypto.rs  error.rs  hash.rs  lib.rs  statement.rs  wasm_api.rs
origin-core/tests/: adversarial.rs  boundary.rs  deterministic.rs  key_verification.rs  negative.rs  primitive_proof.rs  proptest.rs  sidechannel.rs  tamper.rs
scripts/: sentinel.sh  sync-openapi.sh  unsafe_audit.sh
sdk/typescript/: package.json  test.mjs  tsconfig.json
sdk/typescript/src/: index.d.ts  index.mjs  index.ts
security/sentinel-evidence/L1/: DOMAIN1_OFFSET_PROOF.txt  DOMAIN1_PROPERTY_BASED.txt  DOMAIN1_TIMESTAMP_LE.txt  DOMAIN2_TAMPER.txt  DOMAIN2_TIMING_TTEST.txt  DOMAIN5_STREAMING.txt  DOMAIN9_MALLEABILITY.txt
sentinel_evidence/L1/: DOMAIN2_TIMING_TTEST.txt  domain1_offset_of_output.txt
services/: README.md
tests/interop/test_vectors/: poo_v1.json
