[workspace]
resolver = "2"
members = [
    "crates/origin-core",
    "crates/origin-cli",
    "crates/origin-embed",
    "crates/origin-ivg",
    "crates/origin-hae",
    "crates/origin-vrm",
    "crates/origin-ikm",
    "crates/origin-zk",
    "crates/fuzz",
]

[workspace.package]
version = "1.0.0"
edition = "2024"
license = "MIT"
