[package]
name = "origin-cli"
version = "1.0.0"
edition = "2024"
license = "MIT"
description = "Origin Protocol CLI — hash, sign, verify, audit"
homepage = "https://github.com/thupa-pro/Origin"
repository = "https://github.com/thupa-pro/Origin"
keywords = ["provenance", "signing", "verification", "cryptography", "supply-chain"]
categories = ["cryptography", "command-line-utilities"]

[dependencies]
origin-core = { path = "../origin-core", version = "1.0.0" }
clap = { version = "4", features = ["derive"] }
base64 = "0.22"
thiserror = "2"
