[package]
name = "origin-core"
version = "1.2.0"
edition = "2024"
license = "MIT"
description = "Origin Protocol — cryptographic provenance for digital artifacts"
homepage = "https://github.com/thupa-pro/Origin"
repository = "https://github.com/thupa-pro/Origin"
keywords = ["provenance", "signing", "verification", "cryptography", "supply-chain"]
categories = ["cryptography", "command-line-utilities"]

[dependencies]
ed25519-dalek = { version = "2", features = ["digest"] }
sha2 = "0.11"
base64 = { version = "0.22", features = ["alloc"] }
zeroize = { version = "1", features = ["zeroize_derive"] }
thiserror = "2"
hex = "0.4"
rand = "0.9"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }

[dev-dependencies]
tempfile = "3"
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1"
test-strategy = "0.4"

[[bench]]
name = "verify"
path = "../benches/verify.rs"
harness = false
