[package]
name = "origin-core"
version = "1.0.0"
edition = "2024"
description = "Origin Protocol — cryptographic provenance for digital artifacts"

[features]
default = ["std"]
std = []

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
ed25519-dalek = { version = "2", features = ["digest"], default-features = false }
sha2 = { version = "0.10", default-features = false }
base64 = { version = "0.22", features = ["alloc"], default-features = false }
zeroize = { version = "1", features = ["zeroize_derive"], default-features = false }
hex = { version = "0.4", default-features = false, features = ["alloc"] }
bytemuck = { version = "1", default-features = false }
hashbrown = { version = "0.15", default-features = false, features = ["default-hasher", "alloc"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
getrandom = { version = "0.2", default-features = false }

[dev-dependencies]
tempfile = "3"

[lints.rust]
unsafe_code = "deny"
