[package]
name = "origin-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Origin Protocol CLI — hash, sign, verify, audit"

[dependencies]
origin-core = { path = "../origin-core" }
clap = { version = "4", features = ["derive"] }
miette = { version = "7", features = ["fancy"] }
tempfile = "3"
hex = { version = "0.4", default-features = false }
chacha20poly1305 = "0.10"
argon2 = "0.5"
rand = "0.8"
rpassword = "7"
