[package]
name = "origin-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Origin Protocol — cryptographic provenance for digital artifacts"

[features]
default = ["std"]
std = ["rand_chacha", "rand_core"]

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
ed25519-dalek = { version = "2", features = ["digest"], default-features = false }
sha2 = { version = "0.10", default-features = false }
base64 = { version = "0.22", features = ["alloc"], default-features = false }
zeroize = { version = "1", features = ["zeroize_derive"], default-features = false }
hex = { version = "0.4", default-features = false, features = ["alloc"] }
bytemuck = { version = "1", default-features = false }
hashbrown = { version = "0.15", default-features = false, features = ["default-hasher", "alloc"] }
subtle = { version = "2", default-features = false }
rand_chacha = { version = "0.3", default-features = false, optional = true }
rand_core = { version = "0.6", default-features = false, optional = true }
image = { version = "0.25", default-features = false, features = ["jpeg", "png"], optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
getrandom = { version = "0.2", default-features = false }

[dev-dependencies]
criterion = { version = "0.5", default-features = false }
proptest = "1"
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }

[[bench]]
name = "verify"
harness = false

[lints.rust]
unsafe_code = "deny"
